@@ -90,7 +90,7 @@
         <?php _e("this will run a special script to test your configuration options", 'postie'); ?>
     </form>
 
-    <form name="postie-options" method="post" action='options.php'>
+    <form name="postie-options" method="post" action='options.php' autocomplete="off">
         <?php
         settings_fields('postie-settings');
         ?>
@@ -157,12 +157,12 @@
                     </tr>
                     <tr valign="top">
                         <th width="33%" scope="row"><?php _e('Mail Userid:', 'postie') ?></th>
-                        <td><input name='postie-settings[mail_userid]' type="text" id='postie-settings-mail_userid' value="<?php echo esc_attr($mail_userid); ?>" size="40" /></td>
+                        <td><input name='postie-settings[mail_userid]' type="text" id='postie-settings-mail_userid' autocomplete='off' value="<?php echo esc_attr($mail_userid); ?>" size="40" /></td>
                     </tr>
                     <tr valign="top">
                         <th scope="row"><?php _e('Mail Password:', 'postie') ?></th>
                         <td>
-                            <input name='postie-settings[mail_password]' type="password" id='postie-settings-mail_password' value="<?php echo esc_attr($mail_password); ?>" size="40" />
+                            <input name='postie-settings[mail_password]' type="password" id='postie-settings-mail_password' autocomplete='off' value="<?php echo esc_attr($mail_password); ?>" size="40" />
                         </td>
                     </tr>
                     <tr>
