@@ -16,7 +16,8 @@ Attachments are now processed in the order they were attached.
 
 == CHANGELOG ==
 = 1.5.1 (future)
-*
+* Turned on POP3 debug logging if POSTIE_DEBUG is TRUE.
+* Disable autocomplete on some setup fields
 
 = 1.5.0 (2013.04.05) =
 * Apply Postie Time Correction to date: command
